fix(Heute) Remove spacing between logo and open call box #24

--- a/src/wp-content/themes/grossartig/scss/category.scss
+++ b/src/wp-content/themes/grossartig/scss/category.scss
@@ -266,6 +266,10 @@
             display: block;
             padding-left: 0;
           }
+
+          @include screen-size-l {
+            padding-top: 0;
+          }
         }
 
         &--open-call {
